# guardrails

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
action/: README.md  action.yml  pr-check.sh
docs/: guardrails.md  policy-reference.md  pr-gate-plan.md
policies/: demo-219130470859.yaml  env-isolation.yaml  starter-pack.yaml
src/cw_guardrails/: __init__.py  cli.py  diff.py  engine.py  entry.py  graph.py  merge.py  models.py  policy.py  predicates.py  reachability.py  report.py  selectors.py  suggest.py
src/cw_guardrails/overlay/: __init__.py  apply.py  mapping.py  plan.py  resolve.py
tests/: conftest.py  test_engine.py  test_overlay.py  test_policy.py  test_predicates.py  test_prgate.py  test_reachability.py  test_selectors.py  test_suggest.py
